<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="?android:attr/listSeparatorTextViewStyle"
	        android:text="@string/add_tracking_code_title"
	        />
	    <TextView
	        android:id="@+id/add_tracking_code"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="8dp"
	        android:textSize="18sp"
	        android:gravity="center"
	        android:textColor="@android:color/darker_gray"
	        android:textStyle="bold"
	        />
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="?android:attr/listSeparatorTextViewStyle"
	        android:text="@string/add_tracking_connect"	        
	        />
	    <RelativeLayout
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        >
	        <ImageButton
		        android:id="@+id/add_tracking_connect_button"
		        android:layout_width="35dp"
		        android:layout_height="35dp"
		        android:src="@drawable/plus"
		        android:background="#00000000"
		        android:layout_alignParentRight="true"
		        android:scaleType="centerInside"
		        android:layout_marginRight="4dp"
		        />	
	        <EditText
		        android:id="@+id/add_tracking_connect"
		        android:layout_toLeftOf="@id/add_tracking_connect_button"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="4dp"
		        android:hint="@string/add_tracking_connect_hint"
		        />	    
	    </RelativeLayout>
	</LinearLayout>
	
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="?android:attr/listSeparatorTextViewStyle"
        android:text="@string/add_tracking_trackers_title"
        />    
    <ListView 
	     android:id="@+id/add_tracking_trackers"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"     
		/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="?android:attr/listSeparatorTextViewStyle"
        android:text="@string/add_tracking_tracking_title"
        />
    <ListView 
	     android:id="@+id/add_tracking_tracking"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"     
		/>   
	<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="?android:attr/listSeparatorTextViewStyle"
        android:text="@string/feedback_text"
        />
	<ImageButton 
	    android:id="@+id/feedBackButton"
	    android:layout_width="60dp"
	    android:layout_height="60dp"
        android:src="@drawable/exclamation"
        android:background="#00000000"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:layout_marginLeft="5dp"
	    />
    
		
    

</LinearLayout>
